src/objects/DI_Account_Record_Type_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dental Clinic</fullName>
                    <default>true</default>
                    <label>Dental Clinic</label>
                </value>
                <value>
                    <fullName>Dental Laboratory</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>University</fullName>
                </value>
                <value>
                    <fullName>Wholesaler</fullName>
                </value>
                <value>
                    <fullName>Purchasing Group</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>DENTSPLY</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Non-Dental</fullName>
                </value>
                <value>
                    <fullName>Dealer Sell Out Data Region</fullName>
                </value>
                <value>
                    <fullName>Insurance Care Center</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Zip/Postal Code</fullName>
                </value>
                <value>
                    <fullName>First letters of Zip/Postal Code</fullName>
                </value>
                <value>
                    <fullName>Region</fullName>
                </value>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>Unknown/Other</fullName>
                </value>
                <value>
                    <fullName>End User</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>DNA Distributor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <referenceTo>Country_Configuration__mdt</referenceTo>
        <relationshipLabel>DI Account Record Type Mappings</relationshipLabel>
        <relationshipName>DI_Account_Record_Type_Mappings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clinic</fullName>
                    <default>true</default>
                    <label>Clinic</label>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type_ID__c</fullName>
        <label>Record Type ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>DI Account Record Type Mapping</label>
    <pluralLabel>DI Account Record Type Mappings</pluralLabel>
</CustomObject>